@@ -1,6 +1,10 @@
 
 === ppracer 0.5 alpha2 ===
 
+2006-01-14  Volker Stroebel <volker@planetpenguin.de>
+	* src/sqstdlib/Makefile.am src/ppogl/Makefile.am
+	changes to allow building the project from other directories
+
 2006-01-10  Volker Stroebel <volker@planetpenguin.de>
 	* src/squirrel/squirrel.h
 	added check for config.h
